# gdqbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: build-and-test.yaml  deploy.yaml  docker.yaml  rust.yaml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
k8s/argocd/: application.yaml
src/: error.rs  main.rs
