[package]
name = "gdqbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serenity = { version = "0.12.4", features = ["reqwest"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
twitch_api = { version = "0.7.0-rc.8", features = ["helix", "reqwest", "typed-builder"] }
dotenvy = "0.15.7"
thiserror = "2.0.9"
miette = { version = "7.4.0", features = ["fancy"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
