[package]
name = "gdqbot"
version = "0.1.0"
edition = "2021"

[dependencies]
kvstore-client = { git = "https://github.com/dilaz/kvstore" }
tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "0.12.4", features = ["reqwest"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
twitch_api = { version = "0.7.2", features = ["helix", "reqwest", "typed-builder"] }
dotenvy = "0.15.7"
thiserror = "2.0.17"
miette = { version = "7.6.0", features = ["fancy"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = "0.3.22"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
